<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/users"
        android:title="@string/nav_menu_following" />
    <item
        android:id="@+id/repositories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/repos"
        android:title="@string/nav_menu_repositories" />
    <item
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/profile"
        android:title="@string/nav_menu_profile" />
</menu>